--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.0",
     "antd": "^4.19.4",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -20,6 +21,7 @@
     "swiper": "^8.0.7"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
