--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.0",
+    "@types/ramda": "^0.28.7",
     "antd": "^4.19.4",
     "body-scroll-lock": "^4.0.0-beta.0",
     "next": "12.1.1",
+    "ramda": "^0.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
