--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
     "@reduxjs/toolkit": "^1.8.0",
     "@types/ramda": "^0.28.7",
-    "antd": "^4.19.4",
+    "antd": "^4.19.5",
     "body-scroll-lock": "^4.0.0-beta.0",
     "next": "12.1.1",
     "ramda": "^0.28.0",
