--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.81",
+    "@mui/material": "^5.7.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@types/ramda": "^0.28.7",
     "antd": "^4.19.5",
