--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.8.0",
     "@types/ramda": "^0.28.7",
     "antd": "^4.19.5",
+    "axios": "^0.27.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "next": "12.1.1",
     "ramda": "^0.28.0",
